--- a/sections/Implementation/WaitAndFire.tex
+++ b/sections/Implementation/WaitAndFire.tex
@@ -1,19 +1,20 @@
 \subsection{WaitAndFire}
 When \name has collected enough data to calculate where the target is going to
 be in the future, the task \textc{WaitAndFire} is performed. This task makes
-\name stop collecting data, loads the canon, turns to the calculated angle, angles the
-canon vertically and waits until the right time to fire. When it is done fireing
+\name stop collecting data, loads the cannon, turns to the calculated angle,
+angles the canon vertically and waits until the right time to fire. When it is done firing
 it starts to track again.\nl
 
-This task calls three functions to get it ready to fire. The first function is
-\textc{LoadRound} which pushes the piston out so that the projectile is locked
-in place. The second is \textc{RotateH} which turns \name horisontally to the
-future position of the target. The third function called \textc{Angle} angles
-the canon vertically based on the distance to the target. These three function calls can be seen in
-\autoref{Funccall}\nl
+This task calls three functions in order to get it ready to fire. The first
+function is \textc{LoadRound} which loads a projectile. The second function is
+\textc{RotateH} which turns \name horizontally to the future position of the 
+target. The third function called \textc{Angle}, angles the cannon
+vertically based on the distance to the target. These three function calls can
+be seen in \autoref{Funccall}\nl
 
 \begin{minipage}[H]{\linewidth}
-\begin{lstlisting}[caption = Function calls in WaitAndFire, label = Funccall] 
+\begin{lstlisting}[caption = Function calls in \texttt{WaitAndFire}, label =
+Funccall] 
 task WaitAndFire(){
 	collecting = false;
     LoadRound();
@@ -26,14 +27,14 @@ task WaitAndFire(){
 \end{lstlisting}
 \end{minipage}
 
-The data contained in the struct called \textc{fire} is calculated in the the
+The data contained in the struct called \textc{fire} is calculated in the
 function \textc{CalcFireData} and \textc{CalcFuturePos}, which is explained in
-\autoref{RepScheme}
+\autoref{RepScheme}.
 
 The functionality that determines when to fire is contained in a while loop with
 an if statement that checks if the current time is bigger than or equal to the
-time to fire which is contained in the struct called \textc{fire}. This is seen
-in \autoref{Whentofire}\nl
+time to fire which is contained in the struct called \textc{fire} see
+\autoref{Whentofire}.\nl
  
 \begin{minipage}[H]{\linewidth}
 \begin{lstlisting}[caption = While loop that determines when to fire, label =
