--- a/sections/Design/TnTDesign/TurretDesign.tex
+++ b/sections/Design/TnTDesign/TurretDesign.tex
@@ -83,25 +83,26 @@ this design was tested in \autoref{AppendixAccTest}, and the following conclusio
 were reached:
 
 \begin{itemize}
-  \item The turret has a chance of 13.3\% to misfire .
-  \item In the recorded lengths, the hit location has a spread of between 9cm
-  and 107cm.\fix{Jones will look}{}
-  \item In the recorded widths, the hit location has a spread of between 0.25cm
-  and 8.55cm.
+  \item The turret has an average chance to misfire of 15\%.
+  \item If we disregard the misfires, the turret has a average width-spread of
+  3.357cm at 4 degrees, and up to 6.607cm at 40 degrees.
+  \item If we disregard the misfires, the turret has an average length-spread of
+  4cm at 4 degrees, and up to 20cm at 40 degrees.
 \end{itemize}
 
 This test shows that the turret is fairly accurate, but it does have a
-considerable chance of misfiring. In addition, the tests conducted in
-\autoref{SensorTest} also show that the sensors on the turret are incapable
-of sensing the target any further than the piston design can shoot. Due to this
-fact, the possible distances of the other designs has considerably less
-impact.\nl
+considerable chance of misfiring or shooting sligthly too far. While the
+problem with misfires are not easily solvable, the problem with shooting too far
+or too wide can possibly be solved by increasing the size of the target. In
+addition, the tests conducted in \autoref{SensorTest} also show that the sensors on the turret
+are incapable of sensing the target any further than the piston design can
+shoot. Due to this fact, the possible distances of the other designs has
+considerably less impact.\nl
 
-The final design of the turret has the cannon mounted on a motor that is
-used to control its vertical angle. This way it is able to angle itself in order
-to shoot a target at varying distances. The accuracy of this mechanism is
-ensured by having a high gearing on the motor and connecting the
-platform to the cannon.
+The final design of the turret has the cannon mounted on a motor that is used to
+control its vertical angle. This way it is able to angle itself in order to
+shoot a target at varying distances. The accuracy of this mechanism is ensured
+by having a high gearing on the motor and connecting the platform to the cannon.
 
 
 % the result can be seen in
