--- a/sections/Design/TnTDesign/TurretDesign.tex
+++ b/sections/Design/TnTDesign/TurretDesign.tex
@@ -77,10 +77,16 @@ required minimum of 200cm.
 \figx[0.4]{piston}{A sketch of the piston design.}
 
 
-The piston was chosen as the final cannon design, as it is able to shoot up to
-required range of 200cm and able to store up to  6 shots. The precision of
-this design was tested in \autoref{AppendixAccTest}, and the following conclusions
-were reached:
+The piston-design was chosen for the final cannon design, as it is able to
+shoot up to the required range of 200cm, and is able to fire up to 6
+consecutive shots. In addition, the tests conducted in \autoref{SensorTest} also
+showed that the sensors on the turret are incapable of sensing the target any
+further than ~200cm. Due to this fact, the increased range of the other
+designs were considerably less meaningful when choosing a
+design.\nl
+
+The precision of the piston-design was tested in \autoref{AppendixAccTest}, and
+the conclusion are shown below:
 
 \begin{itemize}
   \item The turret has an average chance to misfire of 15\%.
@@ -90,19 +96,17 @@ were reached:
   4cm at 4 degrees, and up to 20cm at 40 degrees.
 \end{itemize}
 
+In these conclusions, the spread indicates, that on average, the projectile hit
+a location that many centimeters besides the intended location.\\
 This test shows that the turret is fairly accurate, but it does have a
-considerable chance of misfiring or shooting sligthly too far. While the
-problem with misfires are not easily solvable, the problem with shooting too far
-or too wide can possibly be solved by increasing the size of the target. In
-addition, the tests conducted in \autoref{SensorTest} also show that the sensors on the turret
-are incapable of sensing the target any further than the piston design can
-shoot. Due to this fact, the possible distances of the other designs has
-considerably less impact.\nl
+considerable chance of misfiring or shooting sligthly too far. While the problem
+with misfires are not easily solvable, the problem with shooting too far or too
+wide can possibly be solved by increasing the size of the target.
 
-The final design of the turret has the cannon mounted on a motor that is used to
-control its vertical angle. This way it is able to angle itself in order to
-shoot a target at varying distances. The accuracy of this mechanism is ensured
-by having a high gearing on the motor and connecting the platform to the cannon.
+% The final design of the turret has the cannon mounted on a motor that is used to
+% control its vertical angle. This way it is able to angle itself in order to
+% shoot a target at varying distances. The accuracy of this mechanism is ensured
+% by having a high gearing on the motor and connecting the platform to the cannon.
 
 
 % the result can be seen in
