--- a/sections/Design/TnTDesign/TurretDesign.tex
+++ b/sections/Design/TnTDesign/TurretDesign.tex
@@ -97,7 +97,7 @@ the conclusion are shown below:
 \end{itemize}
 
 In these conclusions, the spread indicates, that on average, the projectile hit
-a location that many centimeters besides the intended location.\\
+a location, which was that many centimeters besides the intended location.\\
 This test shows that the turret is fairly accurate, but it does have a
 considerable chance of misfiring or shooting sligthly too far. While the problem
 with misfires are not easily solvable, the problem with shooting too far or too
