--- a/sections/Design/TnTDesign/TurretDesign.tex
+++ b/sections/Design/TnTDesign/TurretDesign.tex
@@ -96,10 +96,11 @@ the conclusion are shown below:
   4cm at 4 degrees, and up to 20cm at 40 degrees.
 \end{itemize}
 
-In these conclusions, the spread indicates, that on average, the projectile hit
-a location, which was that many centimeters besides the intended location.\\
-This test shows that the turret is fairly accurate, but it does have a
-considerable chance of misfiring or shooting sligthly too far. While the problem
+In these conclusions, the spread indicates, that on average, the turret missed
+the intended location with that amount of centimeters.\nl
+
+This test shows that the turret is fairly accurate, but it does
+have a considerable chance of misfiring or shooting sligthly too far. While the problem
 with misfires are not easily solvable, the problem with shooting too far or too
 wide can possibly be solved by increasing the size of the target.
 
