--- a/sections/Design/BNDesig/CondProbTables.tex
+++ b/sections/Design/BNDesig/CondProbTables.tex
@@ -44,6 +44,7 @@ vectors.}
 
 \begin{center}
 \begin{table}[H]
+\centering
 \begin{tabular}{|l|l|l|l|}
 \hline
 \multicolumn{4}{|l|}{P(SA\_0|Vector\_1)} \\ \hline
@@ -65,9 +66,9 @@ Vector\_1     & 41cm/s & 57cm/s & BV \\\hline
 \begin{tabular}{|l|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|p{1.2cm}|}
 \hline
 \multicolumn{10}{|l|}{P(SA\_1|Vector\_1, Vector\_2)} \\\hline
-Vector\_1 & \multicolumn{3}{l|}{41cm/s} & \multicolumn{3}{l|}{57cm/s} &
+Vector\_2 & \multicolumn{3}{l|}{41cm/s} & \multicolumn{3}{l|}{57cm/s} &
 \multicolumn{3}{l|}{BV}\\\hline
-Vector\_2 & 41cm/s & 57cm/s & BV & 41cm/s & 57cm/s & BV & 41cm/s & 57cm/s & BV
+Vector\_1 & 41cm/s & 57cm/s & BV & 41cm/s & 57cm/s & BV & 41cm/s & 57cm/s & BV
 \\\hline
 [-30 - 0] & 0  & 0 & 0 & 0 & 3/6 = 0.5 & 2/6 = 0.33 &
 0 & 0 & 0 \\ \hline
@@ -99,8 +100,6 @@ BV & 21/40 = 0.52  \\ \hline
 \end{table}
 
 %done
-The probability for \texttt{Vector\_2} is given as the following conditional
-probability table:
 \begin{table}[]
 \centering
 \begin{tabular}{|l|l|l|l|}
