--- a/sections/PhysTheory/CalculatingOffset.tex
+++ b/sections/PhysTheory/CalculatingOffset.tex
@@ -12,8 +12,8 @@ takes the projectile to get to it, simply by multiplying the air time with the
 velocity of the target. With this information it is then possible to use
 Pythagoras theorem to calculate the length from the turret to the current
 position of the target. All of this can be used together with the
-\fix{cosine}{Is it sine or cosine} relation to calculate how much the turret
-should turn to be able to hit the target. This topic is further explained during the implementation in
+cosine relation to calculate how much the turret should turn to be able to hit
+the target. This topic is further explained during the implementation in
 \autoref{ImplLabel}.
 
 \section{Conclusion}
