--- a/sections/Conclusion/Conclusion.tex
+++ b/sections/Conclusion/Conclusion.tex
@@ -1,18 +1,20 @@
 \chapter{Conclusion}\label{FinalConclusion}
+This chapter will be used to conclude on the success of the project, based on
+the requirements in \autoref{FeatAndReq} and the ideal scenario in \autoref{ProblemDomain},
+and the test of the turret's accuracy presented in \autoref{TurretAcc}. \nl
+
 Throughout this project the group has been designing and developing an embedded
 system in the form of an automatic turret, which is capable of hitting a target
 in motion. The physical design of the turret was chosen to be made with LEGO,
 and likewise the hardware and software for the turret has been based on the LEGO
-NXT platform.\nl
-
-Following the discussion of the project process in \autoref{projDiscus}, this
-chapter will be used to conclude on the success of the project, based on the
-requirements in \autoref{FeatAndReq} and the ideal scenario in \autoref{ProblemDomain},
-and the test of the turret's accuracy presented in \autoref{TurretAcc}. \nl
-
-To conclude on the success on the project, there are some points from the
-requirements which are not met and some points which are. The requirements and
-if they are met or not can be seen in \autoref{RequirementTable}.
+NXT platform.\\
+To make an initial conclusion on the succes of the project, there are some
+points from the requirements which have not been met while other points are.
+As we have been unable to satisfy all needed requirements, we deem that \name
+is not a satisfactory product, but given better sensors and more time for
+calibration, it would be able to satisfy all the set requirements. 
+The requirements, and their level of completion, can be
+seen below in \autoref{RequirementTable}.
 
 \begin{table}[H]
 \centering
@@ -55,4 +57,18 @@ properly calculated or the data from the sensor was bad. \\ \hline
 \label{RequirementTable}
 \end{table}
 \section{Final Conclusion}
-The project was partially successfull, 
+Based on the partial completion of the requirements, we conclude that, while
+\name is not a satisfactory product, it is still partially succesful, as we have
+been able to build and implement an autonomous turret, which is capable of
+hitting a moving target, albeit with a very low chance to hit.\nl
+
+In addition, while we have been unsuccesful in implementing a machine
+intelligence model, we conclude, that enough of the groundwork has been done, in
+order to allow us to be able to implement it, given more time for future
+development.\nl
+
+Furthermore, in the current implementation, the turret is limited to waiting for
+a target to appear, instead of scanning an area and searching for it. While this
+is not satisfactory, this is a limitation imposed by the quality of the sensors,
+and as such, given better sensors and more time for future development, the
+turret could be made able to realize the ideal operational scenario.
